<resources>
    <string name="app_name">RepX</string>

    <string name="Phone_number">Phone Number</string>
    <string name="Category">Category</string>
    <string name="Area">Area</string>
    <string name="Dealer_Name">Dealer Name</string>
    <string name="Dealer_Code">Dealer Code</string>
    <string name="New_Dealer">New Dealer</string>

    <string name="Database">Database</string>
    <string name="MyProducts">My Products</string>
    <string name="abc">ABC</string>
    <string name="EDIT">EDIT</string>
    <string name="Da">da</string>
    <string name="TODO">TODO</string>
    <string name="AC">ac</string>
    <string name="TextView">TextView</string>
    <string name="NewProduct">NewProduct</string>
    <string name="Product_Name">Product_Name</string>
    <string name="ADD">ADD</string>
    <string name="Search_Here">Search_Here</string>
    <string name="Price">Price</string>
    <string name="Description">Description</string>
    <string name="Code">Code</string>
    <string name="Create_Product">Create_Product</string>
    <string name="Quntity">Quntity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="Create">Create</string>
    <string name="Show_popup">Show_popup</string>
    <string name="X">X</string>
    <string name="delete">delete</string>
    <string name="app_popup_close_icon">app_popup_close_icon</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="do_you_want_to_delete_this_product">Do you want to delete this product?</string>
    <string name="app_reset">App reset</string>
    <string name="biscut">biscut</string>
    <string name="logout">Logout</string>
    <string name="add_new_dealer">Add New dealer</string>
    <string name="add_new_sale">Add New Sale</string>
    <string name="add_new_product">Add New Product</string>
</resources>