<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNewDealerActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bbbb"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity=""
            android:layout_marginTop="70dp"
            android:background="#D2D4E7"
            android:text="New Dealer"
            android:gravity="center_horizontal"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            tools:text="New  Dealer" />


        <EditText
            android:id="@+id/txt_dealer_code"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="60sp"
            android:layout_marginRight="50dp"
            android:autofillHints="@string/Dealer_Code"
            android:backgroundTint="@android:color/black"
            android:gravity="center_horizontal"
            android:hint="@string/Dealer_Code"
            android:inputType="text"
           />


        <EditText
            android:id="@+id/txt_dealer_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="17sp"
            android:layout_marginRight="50dp"
            android:autofillHints="@string/Dealer_Name"
            android:backgroundTint="@android:color/black"
            android:gravity="center_horizontal"
            android:hint="@string/Dealer_Name"
            android:inputType="text"
            />


        <EditText
            android:id="@+id/txt_dealerArea"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="17sp"
            android:layout_marginRight="50dp"
            android:autofillHints="@string/Area"
            android:backgroundTint="@android:color/black"
            android:gravity="center_horizontal"
            android:hint="@string/Area"
            android:inputType="text"
            />


        <EditText
            android:id="@+id/txt_dealerCategory"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="17sp"
            android:layout_marginRight="50dp"
            android:autofillHints="@string/Category"
            android:backgroundTint="@android:color/black"
            android:gravity="center_horizontal"
            android:hint="@string/Category"
            android:inputType="text"
            />


        <EditText
            android:id="@+id/txt_dealerPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="17sp"
            android:layout_marginRight="50dp"
            android:autofillHints="@string/Phone_number"
            android:backgroundTint="@android:color/black"
            android:gravity="center_horizontal"
            android:hint="@string/Phone_number"
            android:inputType="text"
            />


        <Button
            android:id="@+id/btn_addNewDealer"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:background="@drawable/bg_button"
            android:text="ADD"
            android:textSize="25sp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>